--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+:root {
+	--light-red: #fe8599;
+	--medium-red: #fe4466;
+	--dark-red: #773c62;
+	--light-blue: #eafeff;
+	--medium-blue: #c6f5fe;
+	--dark-blue: #84cfff;
+  
+	--nav-bar-height: 2.8rem;  
+}
+
 html, body {
 	position: relative;
 	width: 100%;
@@ -5,62 +18,18 @@ html, body {
 }
 
 body {
-	color: #333;
 	margin: 0;
-	padding: 8px;
+	padding: 0;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: 'Roboto', sans-serif;
+	font-size: 18px;
+}
+
+select, button {
+	font-size: inherit;
+	font-family: inherit;
 }
 
 a {
-	color: rgb(0,100,200);
 	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-input[type="range"] {
-	height: 0;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
 }
