--- a/src/global.css
+++ b/src/global.css
@@ -23,6 +23,7 @@ body {
 	box-sizing: border-box;
 	font-family: 'Roboto', sans-serif;
 	font-size: 18px;
+	background-color: var(--medium-blue);
 }
 
 select, button {
