--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@
 	--light-blue: #eafeff;
 	--medium-blue: #c6f5fe;
 	--dark-blue: #84cfff;
+	--default-shadow: 0px 1px 4px rgba(0, 0, 0, .3);
   
 	--nav-bar-height: 2.8rem;  
 }
