--- a/src/global.css
+++ b/src/global.css
@@ -110,3 +110,24 @@ h2.section-title {
     border-radius: 1.1rem;
     box-shadow: 0px 1px 16px rgba(0, 0, 0, 0.3);
 }
+
+.swal-modal {
+    background-color: var(--light-blue);
+    color: var(--dark-red);
+}
+
+
+
+.swal-title, .swal-text {
+    color: var(--dark-red);
+    font-size: 20px;
+}
+
+.swal-title {
+    font-size: 30px;
+}
+
+.swal-button {
+    background-color: var(--light-blue);
+    color: var(--dark-red);
+}
